# cli

./: README.md  cli  config.yml  pyproject.toml
cli/: main.py
